@@ -3641,6 +3641,14 @@ command to generate the output files.
     <_comment>TGA image</_comment>
     <acronym>TGA</acronym>
     <expanded-acronym>Truevision Graphics Adapter</expanded-acronym>
+    <magic priority="10">
+      <match type="string" value="\1\1" offset="1"/>
+      <match type="string" value="\1\9" offset="1"/>
+      <match type="string" value="\0\3" offset="1"/>
+      <match type="string" value="\0\xa" offset="1"/>
+      <match type="string" value="\0\xb" offset="1"/>
+      <match type="string" value="\0\2" offset="1"/> <!-- Same magic as CUR files -->
+    </magic>
     <glob pattern="*.icb"/>
     <glob pattern="*.tga"/>
     <glob pattern="*.tpic"/>
