@@ -23,7 +23,7 @@ test.ppm image/x-portable-pixmap
 test.ps  application/postscript
 test.psd image/x-psd
 test.sgi image/x-sgi ox
-test.tga image/x-tga ox
+test.tga image/x-tga
 test.tif image/tiff
 test.xbm image/x-xbitmap ox
 test.xcf image/x-xcf ox
